--- a/pom.xml
+++ b/pom.xml
@@ -20,30 +20,19 @@
             <url>https://jcenter.bintray.com</url>
         </repository>
     </repositories>
+
+
     <build>
+        <defaultGoal>install</defaultGoal>
+        <pluginManagement>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12</version>
-                <inherited>true</inherited>
-                <configuration>
-                    <suiteXmlFiles>
-                        <suiteXmlFile>testng.xml</suiteXmlFile>
-                    </suiteXmlFiles>
-                </configuration>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.7</version>
             </plugin>
         </plugins>
-    </build>
+    </pluginManagement>
+</build>
 
 
     <dependencies>
