--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>2.7</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.20</version>
+            </plugin>
         </plugins>
     </pluginManagement>
 </build>
@@ -37,9 +42,14 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+        <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>2.20.0</version>
+            <version>3.4.0</version>
         </dependency>
         <dependency>
             <groupId>org.testng</groupId>
